# onepace-ptbr-addon

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  beamup.json  eslint.config.js  index.js  package-lock.json  package.json  pyproject.toml
scripts/: convert-ass-to-srt.py  convert_ass_to_srt.py  download-all-subs.py  download_all_subs.py  subtitle_converter.py  translate_subs.py
scripts/tests/: test_episode_extractor.py  test_subtitle_converter.py
scripts/tests/fixtures/: sample.ass
subs/: AL_1.ass  AL_1.srt  AL_10.ass  AL_10.srt  AL_11.ass  AL_11.srt  AL_12.ass  AL_12.srt  AL_13.ass  AL_13.srt  AL_14.ass  AL_14.srt  AL_15.ass  AL_15.srt  AL_16.ass  AL_16.srt  AL_17.ass  AL_17.srt  AL_18.ass  AL_18.srt  AL_19.ass  AL_19.srt  AL_2.ass  AL_2.srt  AL_20.ass  AL_20.srt  AL_21.ass  AL_21.srt  AL_3.ass  AL_3.srt  AL_4.ass  AL_4.srt  AL_5.ass  AL_5.srt  AL_6.ass  AL_6.srt  AL_7.ass  AL_7.srt  AL_8.ass  AL_8.srt  (+858 more)
tests/: addon.test.js
